# ai-playground

./: .gitignore  README.md  pyproject.toml
jupter/: agent-tools-distribution.ipynb  auto-gen-with-mcp.ipynb  auto-gen.ipynb
src/mcp-demo/: client.py  server.py
