[project]
name = "ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-ext>=0.5.7",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mcp>=1.8.1",
    "ollama>=0.4.8",
    "tiktoken>=0.9.0",
]
